# esavis

./: .gitignore  camera_test.sh  pyproject.toml  requirements.txt  requirements_4_28_2025.txt  thzvis_launch.bat  thzvis_start.sh
questionable/: camera_check.py  twopix_cal.py
src/: :357  AuxPlotObj.py  CameraItem.py  CameraTab.py  ConfigTab.py  DebugTab.py  OLD__main_proc_fcns.py  SingPixTab.py  THzImageObj.py  THzImageObj_backup.py  THzImageTab.py  THzVisGUI.py  build_config_tab.py  build_singpix_tab.py  build_thz_image_tab.py  requirements_7_28_2025.txt
src/config/: IHP_1_pixel_99RPM  Indie_4usec_3800rpm  Indie_FeedBoard_U16E  Indie_FeedBoard_U16E_40usec  Indie_FeedBoard_U16E_40usec_80pulses  Indie_FeedBoard_homodyne_U16E_20usec_pulses  VDI_2pix_3500RPM_x4dec  VDI_2pix_3950RPM_5_21_2025
src/esavis/: AuxPlotObj.py  THzImageObj.py  THzImageTab.py  THzVisGUI.py  build_thz_image_tab.py
src/esavis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/esavis/postproc/: data_processor.py  external_loader.py  lower_proc_fcns.py  main_proc_fcns.py  power_cube.py
src/postproc/: ;  OLD__daq_comms.py  OLD__postproc_fcns.py  crapscript1.py  dac_comms_old.py  daq_acq_core.py  daq_comms.py  daq_test_1.py  dat_file_fcns.py  data_grabber_test.py  data_proc_fcns.py  data_processor.py  external_loader.py  file_parser.py  lower_proc_fcns.py  main_proc_fcns.py  main_proc_test1.py  main_proc_test2.py  main_proc_test3.py  main_proc_test4.py  plot_fcns.py  test_1.py  test_3.py  tlv.py  trace_config.xml
src/postproc/c_funcs/: Makefile  (+4 more)
(+3 files in other folders)
